--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
     "apps/*",
     "packages/*",
     "packages/sdk/ts"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.2",
+    "ts-jest": "^29.4.1"
+  }
 }
