--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@keisha/engine",
-  "version": "0.1.0",
+  "name": "@keishadb/engine",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -8,9 +8,13 @@
     "test": "jest",
     "bench": "ts-node src/__benchmarks__/engine.bench.ts"
   },
-  "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0"
+    "@types/jest": "^30.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
