--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-router": "^1.131.31",
     "@tanstack/react-router-devtools": "^1.131.31",
     "@tanstack/react-start": "^1.131.31",
+    "better-auth": "^1.3.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
