--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@keishadb/drizzle": "file:../../packages/shared/drizzle",
+    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.31",
     "@tanstack/react-router-devtools": "^1.131.31",
     "@tanstack/react-start": "^1.131.31",
     "better-auth": "^1.3.7",
+    "motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -26,7 +28,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
