--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
@@ -26,6 +27,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
