--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router-devtools": "^1.131.31",
     "@tanstack/react-start": "^1.131.31",
     "better-auth": "^1.3.7",
+    "iconsax-reactjs": "^0.0.8",
     "motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
