--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -9,6 +9,7 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@keishadb/drizzle": "file:../../packages/shared/drizzle",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.31",
@@ -20,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
