--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
     "@keishadb/drizzle": "file:../../packages/shared/drizzle",
+    "@react-spring/web": "^10.0.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.31",
     "@tanstack/react-router-devtools": "^1.131.31",
@@ -21,6 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-spring": "^10.0.1",
+    "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.2",
